[gd_scene load_steps=18 format=3 uid="uid://dlv2u25a2t3j6"]

[ext_resource type="StyleBox" path="res://Assets/Themes/Dark/PanelSuperDarkGreen.tres" id="1"]
[ext_resource type="Script" path="res://Scripts/Views/TimeTrackingPanel/TimeTrackingPanel.gd" id="2"]
[ext_resource type="Theme" uid="uid://ddhmjv4ipwqql" path="res://Assets/Themes/ChargeButtonTheme.tres" id="3"]
[ext_resource type="FontFile" uid="uid://ikh2lpcclouf" path="res://Assets/Fonts/NovaMono/NovaMono-Regular.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://b3pm3npjwi0p4" path="res://Assets/Textures/RoundProgress.png" id="5"]
[ext_resource type="StyleBox" path="res://Assets/Themes/Dark/PanelDarkGreen.tres" id="6"]
[ext_resource type="StyleBox" path="res://Assets/Themes/Dark/PanelGreenNoBorder.tres" id="7"]
[ext_resource type="StyleBox" path="res://Assets/Themes/Dark/PanelDarkGreenBorder.tres" id="9"]
[ext_resource type="StyleBox" path="res://Assets/Themes/Dark/LineEdit.tres" id="10"]
[ext_resource type="Theme" uid="uid://bre26fxkt815k" path="res://Assets/Themes/LineEditCool.tres" id="11"]
[ext_resource type="Texture2D" uid="uid://dw7rvy3f736mp" path="res://Assets/Textures/RoundProgressBG.png" id="12"]
[ext_resource type="FontFile" path="res://Assets/Fonts/Righteous20.tres" id="13"]
[ext_resource type="AudioStream" uid="uid://bd1blyp22bw5" path="res://Assets/Audio/notification2.wav" id="14"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="StyleBoxEmpty" id="5"]

[node name="TimeTrackingPanel" type="Panel"]
clip_contents = true
offset_left = 50.0
offset_right = 300.0
offset_bottom = 650.0
theme_override_styles/panel = ExtResource("9")
script = ExtResource("2")
pomodoro_color = Color(1, 0.121569, 0.121569, 1)

[node name="Content" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 49.0
offset_right = -26.0
offset_bottom = -25.0

[node name="Control2" type="Control" parent="Content/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_horizontal = 11

[node name="Time" type="Label" parent="Content/VBoxContainer"]
self_modulate = Color(1, 0.121569, 0.121569, 1)
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "00:00"

[node name="PomodoroCount" type="Label" parent="Content/VBoxContainer/Time"]
modulate = Color(1, 1, 1, 0.462745)
self_modulate = Color(1, 0.121569, 0.121569, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -51.7001
offset_right = 25.5
offset_bottom = -6.70012
theme_override_fonts/font = SubResource("7")
text = "1/4"

[node name="PomodoroProgress" type="TextureProgressBar" parent="Content/VBoxContainer/Time"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -93.6536
offset_right = 78.5
offset_bottom = 64.3464
step = 0.01
value = 100.0
fill_mode = 4
texture_under = ExtResource("12")
texture_progress = ExtResource("5")
tint_progress = Color(1, 0.121569, 0.121569, 1)
radial_initial_angle = 180.0

[node name="ItemLabel" type="Label" parent="Content/VBoxContainer/Time"]
modulate = Color(1, 1, 1, 0.168627)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.5
offset_top = 68.0
offset_right = 87.5
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("13")

[node name="BreakLabel" type="Label" parent="Content/VBoxContainer/Time"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -151.861
offset_right = 77.5
offset_bottom = -93.861
theme_override_colors/font_color = Color(1, 0.121569, 0.121569, 1)
theme_override_fonts/font = ExtResource("13")
text = "BREAK"

[node name="Control3" type="Control" parent="Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PomodoroButtons" type="VBoxContainer" parent="Content/VBoxContainer"]
layout_mode = 2

[node name="PomodoroStart" type="Button" parent="Content/VBoxContainer/PomodoroButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Start"

[node name="PomodoroReset" type="Button" parent="Content/VBoxContainer/PomodoroButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Reset"

[node name="PomodoroContinue" type="Button" parent="Content/VBoxContainer/PomodoroButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Continue"

[node name="PomodoroBreak" type="Button" parent="Content/VBoxContainer/PomodoroButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Break"

[node name="PomodoroFinish" type="Button" parent="Content/VBoxContainer/PomodoroButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Finish"

[node name="PomodoroCancel" type="Button" parent="Content/VBoxContainer/PomodoroButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Cancel"

[node name="NormalButtons" type="VBoxContainer" parent="Content/VBoxContainer"]
visible = false
layout_mode = 2

[node name="NormalStart" type="Button" parent="Content/VBoxContainer/NormalButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Start"

[node name="NormalContinue" type="Button" parent="Content/VBoxContainer/NormalButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Continue"

[node name="NormalPause" type="Button" parent="Content/VBoxContainer/NormalButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Pause"

[node name="NormalFinish" type="Button" parent="Content/VBoxContainer/NormalButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Finish"

[node name="NormalCancel" type="Button" parent="Content/VBoxContainer/NormalButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3")
text = "Cancel"

[node name="ItemInput" type="LineEdit" parent="Content/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("11")
theme_override_styles/normal = ExtResource("10")
placeholder_text = "Item name"

[node name="StateButtons" type="HBoxContainer" parent="Content"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 0
anchor_right = 1.0
offset_right = -1.0
offset_bottom = 45.0
theme_override_constants/separation = 0

[node name="Normal" type="Button" parent="Content/StateButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3")
theme_override_styles/normal = ExtResource("1")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = SubResource("6")
theme_override_styles/focus = SubResource("5")
toggle_mode = true
text = "Normal"

[node name="Pomodoro" type="Button" parent="Content/StateButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3")
theme_override_styles/normal = ExtResource("1")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = SubResource("6")
theme_override_styles/focus = SubResource("5")
toggle_mode = true
text = "Pomodoro"

[node name="SecondsTimer" type="Timer" parent="."]

[node name="NotificationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14")

[connection signal="text_changed" from="Content/VBoxContainer/ItemInput" to="." method="_on_ItemInput_text_changed"]
[connection signal="pressed" from="Content/StateButtons/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Content/StateButtons/Pomodoro" to="." method="_on_Pomodoro_pressed"]
[connection signal="timeout" from="SecondsTimer" to="." method="_on_SecondsTimer_timeout"]
